--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.MulaTrack"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.mootalabs.mulatrack.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.MulaTrack">
